--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <div class="ligne1-left"><h2>SHELVING</h2></div>
                 <div class="ligne1-right">
                     <h5><a href=""><i class="fa-solid fa-headset fa-2x"></i><span>MOB: (+216) 21 002 629</span></a></h5>
+                    <h4>CONTACTEZ-NOUS</h4>
                 </div>
             </div>
             <nav id="navBar">
@@ -46,8 +47,8 @@
                 </div>
             </nav>
         </header>
-        <section style="height: 1200px;"></section>
-        <h1>Nav Bar 2</h1>
+        <section style="height: 1200px; margin-top: 55px;"><h1>Nav Bar 2</h1></section>
+        
         <script src="js/navBar.js"></script>
     </body>
 </html>
